--- a/public/partials/beer.html
+++ b/public/partials/beer.html
@@ -123,7 +123,7 @@
         <!-- =========================== -->
         <!-- display results -->
         <!-- =========================== -->
-        <div class="container" ng-repeat="beer in data">
+        <div class="container" ng-repeat="beer in beers">
             <ul class="collapsible popout" data-collapsible="accordion">
                 <li>
                     <a class="collapsible-header popout"><i class="fa fa-beer" aria-hidden="true"></i>{{beer.name}}</a>
@@ -140,7 +140,7 @@
                 </li>
 
                 <li>
-                    <div class="collapsible-header popout"><i class="fa fa-home" aria-hidden="true"></i>{{beer.brewery}}</div>
+                    <div class="collapsible-header popout"><i class="fa fa-home" aria-hidden="true"></i>{{beer.glass.name}}</div>
                     <div class="collapsible-body">
                         <p>Lorem ipsum dolor sit amet.</p>
 
