--- a/public/partials/friends.html
+++ b/public/partials/friends.html
@@ -73,6 +73,18 @@
         </header>
 
         <div class="container">
+
+            <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
+                <a class="btn-floating btn-large red">
+                    <i class="material-icons large">person_add</i>
+                </a>
+                <ul>
+                    <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+                    <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+                    <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
+                    <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+                </ul>
+            </div>
             <div ng-repeat="friend in friends">
                 <ul class="collapsible" data-collapsible="accordion">
                     <li>
