--- a/public/partials/friends.html
+++ b/public/partials/friends.html
@@ -66,6 +66,7 @@
                         <li><a href="./beer.html">Beer</a></li>
                         <li><a href="./party.html"> Party</a></li>
                         <li><a href="./friends.html"> Friends</a></li>
+                        <li><a href="./users.html"> Users</a></li>
                         <li><a href="../../index.html"> Log Out</a></li>
                     </ul>
                 </div>
