--- a/public/partials/users.html
+++ b/public/partials/users.html
@@ -101,9 +101,9 @@
             <div ng-repeat="user in users" class="row">
                 <div class="col s6">
                     <div class="card">
-                        <h3 class="card-title center-align"> {{user.name}}</h3>
+                        <h3 class="user_name card-title center-align"><strong> {{user.name}}</strong></h3>
                         <div class="card-image">
-                            <img ng-src="{{}}">
+                            <img src="https://s-media-cache-ak0.pinimg.com/564x/3c/a4/cc/3ca4cc0a8d96c475f08a86214d023a00.jpg">
                         </div>
                         <div class="card-content" ng-repeat="beer in user.beers">
                             <!-- <h4>{{user.beers}}</h4> -->
@@ -118,22 +118,24 @@
                             <a href="#">My Top Five beers</a>
 
                             <!-- Modal Trigger -->
-                            <a ng-click="hide()" class="modal-trigger pull-right" href="#modal1">My beers</a>
+                            <a data-target="modal1" class="modal-close modal-trigger pull-right" href="#modal1"> My beers</a>
+                            <div id="modal1" class="user_beer modal" ng-repeat="beer in beers">
+                                <!-- Modal Structure -->
+                                <div class="modal-content">
+                                    <h4>Favorite Beers</h4>
+                                    <p>{{beer.name}}</p>
+                                </div>
+                                <div class="modal-footer">
+                                    <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Add to my favorites</a>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div id="modal1" class="user_beer modal" ng-repeat="beer in beers" ng-if="showMe">
-                <!-- Modal Structure -->
-                <div class="modal-content">
-                    <h4>Favorite Beers</h4>
-                    <p>{{beer.name}}</p>
-                </div>
-                <div class="modal-footer">
-                    <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Add to my favorites</a>
-                </div>
-            </div>
+
         </div>
 
         <footer class="page-footer grey darken-4" id="footer">
